# ray_tracing_one_weekend_comp

./: CMakeLists.txt  Readme.md
resources/shaders/: rt.comp
src/: camera.h  main.cc  material.h  primitive.h  rt.h  vec.h
